--- a/aula01/pagina01.htm
+++ b/aula01/pagina01.htm
@@ -11,7 +11,7 @@
 <h3>Título 3</h3>
 ....
 <h6>Título 6</h6>
-<!-- linha horizontal -->
+<!-- linha horizontal (obsoleta)-->
 <hr>
 <!-- quebra de linha -->
 Esta é uma página muito bonita <br>
