--- a/aula02/links.htm
+++ b/aula02/links.htm
@@ -8,5 +8,7 @@
 <h1>Links</h1>
 <h2>Link com endereço (URL) absoluto:</h2>
 Este é um <a href="http://www.google.com">link para o Google</a><br>
+<h2>Link para um arquivo na mesma pasta local</h2>
+Este é um link para o arquivo <a href="tabelas.htm">tabelas.htm</a>
 </body>
 </html>
