--- a/aula03/formularios.htm
+++ b/aula03/formularios.htm
@@ -27,8 +27,13 @@ Massa(mutuamente exclusivos)<br>
 <input type="radio" name="bd" value="recheada">Recheada<br>
 <input type="radio" name="bd" value="simples">Simples<br>
 
-
-
+<hr>Cidade:
+<select name="cidade">
+	<option value="1">Pelotas</option>
+	<option value="2">Rio Grande</option>
+	<option value="3">Porto Alegre</option>
+</select>
+<hr>
 
 <!-- botao de enviar o formulário -->
 <input type="submit" name="botao" value="buscar">
