--- a/aula03/formularios.htm
+++ b/aula03/formularios.htm
@@ -10,13 +10,13 @@
 <form action="http://www.duckduckgo.com">
 <!-- caixa de entrada de texto -->
 <!-- size: tamanho da caixa em caracteres -->
-<!-- comprimento maximo do texto na caixa -->
+<!-- maxlength: comprimento maximo do texto na caixa -->
 Busca:<input type="text" name="q" size="10" maxlength="15"><br>
 <!-- senha -->
 Senha:<input type="password" name="senha"><br>
 Ingredientes (opcionais):<br>
 <input type="checkbox" name="i1" value="azeitona">Azeitona<br>
-<input type="checkbox" name="i2" value="brocoli">Brocoli<br>
+<input type="checkbox" name="i2" value="brocoli">Brócolis<br>
 <input type="checkbox" name="i3" value="bacon">Bacon<br>
 <input type="checkbox" name="i4" value="cebola">Cebola<br>
 <input type="checkbox" name="i5" value="gorgonzola">Gorgonzola<br>
@@ -46,7 +46,10 @@ Massa(mutuamente exclusivos)<br>
 Mensagem:<br>
 <textarea name="mensagem" rows="20" cols="80">
 </textarea>
-<br>
+<hr>
+Enviar arquivo:
+<input type="file" name="arquivo">
+<hr>
 <!-- botao de enviar o formulário -->
 <input type="submit" name="botao" value="buscar">
 
