--- a/aula04/cores.html
+++ b/aula04/cores.html
@@ -53,6 +53,7 @@
 <p class="branco">white (#FFFFFF)</p>
 <p class="cinza">gray (#808080)</p>
 <p><a href="https://www.w3schools.com/cssref/css_colors.asp" target="_blank">Mais cores</a></p>
+<p><a href="https://color.adobe.com" target="_blank">Adobe Kuller </p>
 <hr>
 <a href="fontes.html">[Anterior]</a>
 </body>
