--- a/aula04/exemplo002.html
+++ b/aula04/exemplo002.html
@@ -21,7 +21,7 @@
      }
      h1 {
          font-family:"Arial","Verdana",sans-serif;
-         color:yellow; /* amarelo (cor nomemada) */
+         color:#FFFF00; /* amarelo HEXADECIMAL  */
         
        }
      h2 {
@@ -33,11 +33,16 @@
      a {
        color:greenyellow; /* amarelo esverdeado (cor nomeada) */
      }
+
+     h3 {
+       color:rgb(255,255,0); /* rgb */
+     }
   </style>
 </head> 
 <body>
   <h1>Star Wars</h1>
   <h2>Personagens</h2>
+  <h3>Do mal</h3>
   <p>Darth Vader</p><br>
   Texto diretamente filho de body<br>
 <a href="exemplo001.html">[Anterior]</a>
