--- a/aula05/exClass.html
+++ b/aula05/exClass.html
@@ -5,15 +5,22 @@
 <meta charset="utf-8" />
 <style>
     /* seletores por classe  */
-    .paragrafo_azul {color: blue;}
-    .paragrafo_verde {color:green;}
-
+    .vermelho {color: red;
+    		  background-color:blue;
+    		  }
+    .verde {color:green;
+    		font-family:fantasy;
+    		font-size:60px;}
+	
+	h1 {
+		background-color:yellow;
+	}
 </style>
 </head>
 <body>
-   <p class="paragrafo_azul">Este é um paragrafo azul</p>
-   <p class="paragrafo_verde">Este é um paragrafo verde</p>
-   <p class="paragrafo_azul">Este é outro paragrafo azul</p>
-   <h1 class="paragrafo_azul">este é o H1 azul </h1>
+   <h1 class="vermelho">este é o H1 </h1>
+   <!-- span aplica uma classe num pedaço do texto -->
+   <h2>Esté o <span class="verde">H2</span></h2>
+   <h1>Outro H1</h1>
 </body>
 </html>
