--- a/aula05/exID.html
+++ b/aula05/exID.html
@@ -6,7 +6,7 @@
 <style>
     /* seletores por id  */
     #titulo1 {color: red;}
-    #titulo2 {color: coral;}
+    #titulo2 {color: blue;}
 </style>
 </head>
 <body>
