--- a/aula05/exemplo_box01b.html
+++ b/aula05/exemplo_box01b.html
@@ -13,9 +13,9 @@
         /* ordem: top right bottom left */
         padding: 5px; /* distancia interna à borda */
         margin: 0px; /* distancia externa à borda*/
-        width:80vw; /* largura da caixa em 80% do viewport (largura da janela do documento) */
+        width:100vw; /* largura da caixa em 80% do viewport (largura da janela do documento) */
         min-width:650px; /* largura minima */
-        height: 30vh; /* altura da caixa em 30% do viewport */
+        height: 80vh; /* altura da caixa em 30% do viewport */
         min-height:100px; /* altura minima */
         /* altera o box model para que padding e borda
         não se somem a width e height */
@@ -24,8 +24,9 @@
 </style>
 </head>
 <body>
-    <h1>Largura/Altura Máxima e Mínima</h1>
-    <div id="dv01">Esta é uma caixa</div>
+   
+    <div id="dv01">
+     <h1>Largura/Altura Máxima e Mínima</h1>Esta é uma caixa</div>
     
 </body>
 </html>
