--- a/aula05/layout01.html
+++ b/aula05/layout01.html
@@ -52,17 +52,15 @@
 			margin:0;
 			float:left;
 		}
-
-
 	</style>
 </head>
 <body>
 	<div id="dvprincipal">
-		<div id="dvtopo">1</div>
-		<div id="dvesquerda">2</div>
-		<div id="dvcentro">3</div>
-		<div id="dvdireita">4</div>
-		<div id="dvrodape">5</div>
+		<div id="dvtopo">TOPO</div>
+		<div id="dvesquerda">ESQ</div>
+		<div id="dvcentro">CENTRO</div>
+		<div id="dvdireita">DIR</div>
+		<div id="dvrodape">RODAPÉ</div>
 	</div>
 </body>
 </html>
