--- a/aula05/layout01.html
+++ b/aula05/layout01.html
@@ -52,11 +52,22 @@
 			margin:0;
 			float:left;
 		}
+		#dvlogo {
+			width:100px;
+			height:100px;
+			background-color:white;
+			box-sizing:border-box;
+			padding:10px;
+			margin:0;
+			float:left;
+		}
 	</style>
 </head>
 <body>
 	<div id="dvprincipal">
-		<div id="dvtopo">TOPO</div>
+		<div id="dvtopo">
+			<DIV id="dvlogo">LOGO</DIV>TOPO
+		</div>
 		<div id="dvesquerda">ESQ</div>
 		<div id="dvcentro">CENTRO</div>
 		<div id="dvdireita">DIR</div>
