--- a/aula06/teste_aula.html
+++ b/aula06/teste_aula.html
@@ -8,7 +8,9 @@
 <body>
 <h1 class="tituloVermelho">Minha página feliz</h1>
 <h2 class="fonteArial">Outro título</h2>
-<p id="meuParagrafo" class="fonteArial">Após se classificarem nos jogos anteriores, seis equipes do IFSul disputarão as finais da etapa sul-brasileira dos Jogos dos Institutos Federais (JIFs) na manhã desta quinta-feira (31): basquete masculino, handebol masculino e feminino, vôlei de quadra masculino</p>
+<div class="dv01">
+	<p id="meuParagrafo" class="fonteArial">Após se classificarem nos jogos anteriores, seis equipes do IFSul disputarão as finais da etapa sul-brasileira dos Jogos dos Institutos Federais (JIFs) na manhã desta quinta-feira (31): basquete masculino, handebol masculino e feminino, vôlei de quadra masculino</p>
+</div>
 <p class="fonteArial">vôlei de areia masculino e futsal feminino. Nos jogos, que acontecerão na cidade de São José dos Pinhais/PR, serão decididas as equipes classificadas para a etapa nacional dos JIFs.</p>
 </body>
 </html>
