--- a/aula09/exercicos/exercicio02.html
+++ b/aula09/exercicos/exercicio02.html
@@ -6,13 +6,16 @@
 <style>
 h1 {
     color: red;
+    position:absolute;
+    left:20px;
+    top:30px;
 }
 </style>
 </head>
 <body>
 
 <h1>Titulo</h1>
-<p>Posicione o título acima 20px à esquerda e 30px abaixo de sua posição relativa normal</p>
+<p>Posicione o título acima 20px à esquerda e 30px abaixo de sua posição estática normal</p>
 
 
 
