--- a/aula09/exercicos/exercicio03.html
+++ b/aula09/exercicos/exercicio03.html
@@ -6,13 +6,57 @@
 <style>
 h1 {
     color: red;
+    position:fixed;
+    left:50px;
+    top:100px;
 }
 </style>
 </head>
 <body>
 
 <h1>Titulo</h1>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p><p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
 <p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+<p>Posicione o título 50px da esquerda  e 100px do topo da página HTML</p>
+
 
 
 
