--- a/aula10/video/ex001.htm
+++ b/aula10/video/ex001.htm
@@ -25,9 +25,24 @@ html,body {
     width: 100%;
     height: auto;
 }
+header {
+	background-color:blue;
+	width:100vw;
+	height:15vh;
+	opacity:.7;
+}
 </style>
 </head>
 <body>
+	<header>
+		Cabeçalho da página
+	</header>
+	<article>
+		Conteúdo principal
+	</article>
+	<footer>
+		Rodapé
+	</footer>
 <div class="fullscreen-bg">
     <video loop muted autoplay poster="cuphead.jpg" class="fullscreen-bg__video">
         <source src="cuphead.webm" type="video/webm">
