--- a/aula10/video/ex001.htm
+++ b/aula10/video/ex001.htm
@@ -31,6 +31,18 @@ header {
 	height:15vh;
 	opacity:.7;
 }
+article {
+	background-color:white;
+	width:100vw;
+	height:75vh;
+	opacity:.7;
+}
+footer{
+	background-color:gray;
+	width:100vw;
+	height:10vh;
+	opacity:.7;
+}
 </style>
 </head>
 <body>
