--- a/aula10/video/ex001.htm
+++ b/aula10/video/ex001.htm
@@ -26,22 +26,19 @@ html,body {
     height: auto;
 }
 header {
-	background-color:blue;
+	background-color:rgba(0,0,255,.7);
 	width:100vw;
 	height:15vh;
-	opacity:.7;
 }
 article {
-	background-color:white;
+	background-color:rgba(255,255,255,.7);
 	width:100vw;
 	height:75vh;
-	opacity:.7;
 }
 footer{
-	background-color:gray;
+	background-color:rgba(100,100,100,.7);
 	width:100vw;
 	height:10vh;
-	opacity:.7;
 }
 </style>
 </head>
