--- a/aula10/fontes/index.html
+++ b/aula10/fontes/index.html
@@ -4,11 +4,22 @@
 	<title>Fonte ttf</title>
 	<meta charset="utf-8">
 	<style type="text/css">
-		
-		
+		@font-face {
+			font-family:jedi;
+			src:url("starjedi.ttf");
+		}
+
+		h1 {
+			font-family:jedi;
+			font-size:100px;
+			color:yellow;
+		}
+		body {
+			background-color:black;
+		}
 	</style>
 </head>
 <body>
-
+	<h1>Ta nam<br> nam<br> nam<br> nam<br> nam<br> nam.....</h1>
 </body>
 </html>
