--- a/aula11/exemplo001.html
+++ b/aula11/exemplo001.html
@@ -33,9 +33,9 @@
     pode ser container ou container-fluid  -->
     <div class="container">
      <div class="row"> <!-- cada linha do grid -->
-        <div class="col-lg-6 col-md-2 col-sm-6 col-xs-12">1</div><!--cada coluna do grid -->
-        <div class="col-lg-4 col-md-4 col-sm-3 col-xs-12">2</div>
-        <div class="col-lg-2 col-md-6 col-sm-3 col-xs-12">3</div>
+        <div class="col-lg-6 col-md-2 col-sm-6">1</div><!--cada coluna do grid -->
+        <div class="col-lg-4 col-md-4 col-sm-3">2</div>
+        <div class="col-lg-2 col-md-6 col-sm-3">3</div>
       </div>
     </div><!-- fim container -->
   </body>
